--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 # Configuration file
 # key = value
 quarkus.http.port=19080
+
+quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:dev
+quarkus.datasource.driver=org.h2.Driver
+quarkus.datasource.username=username-dev
+quarkus.datasource.min-size=3
+quarkus.datasource.max-size=13
