--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,19 @@
 # key = value
 quarkus.http.port=19080
 
-quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:dev
-quarkus.datasource.driver=org.h2.Driver
-quarkus.datasource.username=username-dev
+#quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:dev
+#quarkus.datasource.driver=org.h2.Driver
+#quarkus.datasource.username=username-dev
+#quarkus.datasource.min-size=3
+#quarkus.datasource.max-size=13
+
+quarkus.datasource.url=jdbc:postgresql:postgres
+quarkus.datasource.driver=org.postgresql.Driver
+quarkus.datasource.password=agda
 quarkus.datasource.min-size=3
 quarkus.datasource.max-size=13
+
+
+# Flyway minimal config properties
+quarkus.flyway.migrate-at-start=true
+quarkus.flyway.schemas=diary
