Build webapp with webpack and place under META-INF/resources.
No need to include node or node_modules in META-INF.
Set maven front end plugin working directory to src/main/webapp and
make sure that webpack places output under /target/classes/META_INF/resources.

--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
         https://repo1.maven.org/maven2/com/github/eirslett/frontend-maven-plugin/ -->
         <version>1.7.6</version>
         <configuration>
-          <workingDirectory>src/main/resources/META-INF/resources</workingDirectory>
+          <workingDirectory>src/main/webapp</workingDirectory>
         </configuration>
         <executions>
 
