Connect to PostgreSql running on localhost.
On mac Docker exposes localhost as host.docker.internal to
running containers.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ quarkus.http.port=19080
 #quarkus.datasource.min-size=3
 #quarkus.datasource.max-size=13
 
-quarkus.datasource.url=jdbc:postgresql:postgres
+quarkus.datasource.url=jdbc:postgresql://host.docker.internal:5432/postgres
 quarkus.datasource.driver=org.postgresql.Driver
 quarkus.datasource.password=agda
 quarkus.datasource.min-size=3
