Comment out datasource config so it can be overridden by MicroProfile config.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Configuration file
 # key = value
-quarkus.http.port=19080
+%dev.quarkus.http.port=19080
 
 #quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:dev
 #quarkus.datasource.driver=org.h2.Driver
@@ -8,9 +8,10 @@ quarkus.http.port=19080
 #quarkus.datasource.min-size=3
 #quarkus.datasource.max-size=13
 
-quarkus.datasource.url=jdbc:postgresql://host.docker.internal:5432/postgres
+#%dev-docker.quarkus.datasource.url=jdbc:postgresql://host.docker.internal:5432/postgres
+#quarkus.datasource.url=jdbc:postgresql:postgres
 quarkus.datasource.driver=org.postgresql.Driver
-quarkus.datasource.password=agda
+#%dev.quarkus.datasource.password=agda
 quarkus.datasource.min-size=3
 quarkus.datasource.max-size=13
 
