--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 # key = value
 %dev.quarkus.http.port=19080
 
-#quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:dev
-#quarkus.datasource.driver=org.h2.Driver
-#quarkus.datasource.username=username-dev
+%test.quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:dev
+%test.quarkus.datasource.driver=org.h2.Driver
+%test.quarkus.datasource.username=username-dev
 #quarkus.datasource.min-size=3
 #quarkus.datasource.max-size=13
 
