--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,9 @@
 # Configuration file
 # key = value
 quarkus.http.port=19080
-
-quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:test
+quarkus.flyway.migrate-at-start=true
+quarkus.flyway.schemas=DIARY
+quarkus.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
 quarkus.datasource.driver=org.h2.Driver
 quarkus.datasource.username=username-test
 quarkus.datasource.min-size=3
