--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,9 +2,9 @@
 # key = value
 quarkus.http.port=19080
 quarkus.flyway.migrate-at-start=true
-quarkus.flyway.schemas=DIARY
-quarkus.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
-quarkus.datasource.driver=org.h2.Driver
+quarkus.flyway.schemas=diary
+quarkus.datasource.driver=org.testcontainers.jdbc.ContainerDatabaseDriver
 quarkus.datasource.username=username-test
+quarkus.datasource.password=agda
 quarkus.datasource.min-size=3
 quarkus.datasource.max-size=13
