Clean obosolete H2-related config.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,11 @@
 # key = value
 %dev.quarkus.http.port=19080
 
-%test.quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:dev
-%test.quarkus.datasource.driver=org.h2.Driver
-%test.quarkus.datasource.username=username-dev
-#quarkus.datasource.min-size=3
-#quarkus.datasource.max-size=13
-
 #%dev-docker.quarkus.datasource.url=jdbc:postgresql://host.docker.internal:5432/postgres
-#quarkus.datasource.url=jdbc:postgresql:postgres
+%dev.quarkus.datasource.url=jdbc:postgresql:postgres
 quarkus.datasource.driver=org.postgresql.Driver
-#%dev.quarkus.datasource.password=agda
+%dev.quarkus.datasource.password=agda
+%dev.quarkus.datasource.username=joel
 quarkus.datasource.min-size=3
 quarkus.datasource.max-size=13
 
