--- a/Dockerfile.multistage.jvm
+++ b/Dockerfile.multistage.jvm
@@ -18,7 +18,7 @@ COPY pom.xml /usr/src/app
 USER root
 RUN chown -R quarkus /usr/src/app
 USER quarkus
-RUN mvn -f /usr/src/app/pom.xml clean package
+RUN mvn -f /usr/src/app/pom.xml clean package -DexcludedGroups="testcontainer"
 
 ## Stage 2 : create the docker final image
 FROM fabric8/java-alpine-openjdk8-jre
