--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 # Configuration file
 # key = value
 %dev.quarkus.http.port=19080
-
+quarkus.http.test-port=8083
 #%dev-docker.quarkus.datasource.url=jdbc:postgresql://host.docker.internal:5432/postgres
-%dev.quarkus.datasource.url=jdbc:postgresql:postgres
-quarkus.datasource.driver=org.postgresql.Driver
-%dev.quarkus.datasource.password=agda
-%dev.quarkus.datasource.username=joel
-quarkus.datasource.min-size=3
-quarkus.datasource.max-size=13
+%dev.quarkus.datasource.jdbc.url=jdbc:postgresql:postgres
+
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/diary
+quarkus.datasource.username=postgres
+quarkus.datasource.password=agda
+quarkus.datasource.jdbc.min-size=3
+quarkus.datasource.jdbc.max-size=13
 
 
 # Flyway minimal config properties
