--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,10 +1,12 @@
 # Configuration file
 # key = value
-quarkus.http.port=19080
+quarkus.http.test-port=8083
 quarkus.flyway.migrate-at-start=true
 quarkus.flyway.schemas=diary
-quarkus.datasource.driver=org.testcontainers.jdbc.ContainerDatabaseDriver
+quarkus.datasource.db-kind=other
+quarkus.datasource.jdbc.url=jdbc:tc:postgresql:9.6.8:///diary
+quarkus.datasource.jdbc.driver=org.testcontainers.jdbc.ContainerDatabaseDriver
 quarkus.datasource.username=username-test
 quarkus.datasource.password=agda
-quarkus.datasource.min-size=3
-quarkus.datasource.max-size=13
+quarkus.datasource.jdbc.min-size=3
+quarkus.datasource.jdbc.max-size=13
