--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ quarkus.http.test-port=8083
 %dev.quarkus.datasource.jdbc.url=jdbc:postgresql:postgres
 
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/diary
-quarkus.datasource.username=postgres
-quarkus.datasource.password=agda
+%quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/diary
+%quarkus.datasource.username=postgres
+%quarkus.datasource.password=agda
 quarkus.datasource.jdbc.min-size=3
 quarkus.datasource.jdbc.max-size=13
 
